<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DadosIMCActivity">

    <EditText
        android:id="@+id/edtPeso"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/peso"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edtAltura"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:hint="@string/altura"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPeso"/>

    <RadioGroup
        android:id="@+id/rgClassificacaoIdade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtAltura">
        <RadioButton
            android:text="@string/adulto_lbl"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbAdulto"
            />
        <RadioButton
            android:text="@string/idoso_lbl"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbIdoso"
            />
    </RadioGroup>

    <Button
        android:id="@+id/btnEnviar"
        android:text="@string/btnEnviar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgClassificacaoIdade"/>


</androidx.constraintlayout.widget.ConstraintLayout>